fix scrollbar horizontal

--- a/css/header.css
+++ b/css/header.css
@@ -4,7 +4,7 @@
   left: 0;
   z-index: -1;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   background: linear-gradient(
     var(--grad-start),
     var(--grad-mid),
